got the stuff in

--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
-<!DOCTYPE>
+<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<head>
-<body>
-<h1 class="hello">hello</h1>
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="master.css">
+    <title>Home Page</title>
+  </head>
+  <body>
+    <h1 class = "firstH">Agnes</h1>
+    <div class="NAV">
+      <nav>
+        <a href="About.html">About me</a>
+        &nbsp
+        &nbsp
+        &nbsp
+        <a href="Friends and family.html">Friends and family</a>
+        &nbsp
+        &nbsp
+        &nbsp
+        <a href="Hobbies.html">Hobbies</a>
+        &nbsp
+        &nbsp
+        &nbsp
+        <a href="Port.html">Portfolio</a>
+      </nav>
+
+    </div>
+
+
+
+
+
+
+  </body>
 </html>
