--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </nav>
 
     </div>
-
+<img src="AgnesFront.jpg" width="auto" height="550" alt="Otter holding a startfish and a toy">
 
 
 
