adding more stuff

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+
 <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="master.css">
-    <title>Home Page</title>
+
+    <title>About</title>
   </head>
   <body>
-    <h1 class = "firstH">Agnes</h1>
+    <h1 id="Ab">About me</h1>
     <div class="NAV">
       <nav>
         <a href="AboutMe.html">About me</a>
@@ -25,9 +26,9 @@
       </nav>
 
     </div>
-<br />
-<img src="AgnesFront.JPG" width="auto" height="550" alt="Otter holding a startfish and a toy">
-
+<h1 id="Top">My name is Agnes and i live in Denmark</h1>
+<p id="P1">My favorite food is... My age is... I love to hug...  </p>
+<img src="AgnesFront.JPG" width="auto" height="450px" alt="">
 
 
 
