added logo to every page and also fixed #2

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,7 +10,9 @@
     <h1 id="Ab">About me</h1>
     <div class="NAV">
       <nav>
-        <a href="AboutMe.html">About me</a>
+        <img src="Logo.jpg" width="auto" height="50px" alt="">
+
+        <a href="Home.html">Home</a>
         &nbsp
         &nbsp
         &nbsp
@@ -27,7 +29,7 @@
 
     </div>
 <h1 id="Top">My name is Agnes and i live in Denmark</h1>
-<p id="P1">My favorite food is... My age is... I love to hug...  </p>
+<p id="P1">My favorite food is  roast chicken salad and knicker bocker glory ice cream sundaes. My age is 8 I love to hug my special blue comfort toy made by Noah (also person who made this website)  </p>
 <img src="AgnesFront.JPG" width="auto" height="450px" alt="">
 
 
