--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1 class = "firstH">Agnes</h1>
     <div class="NAV">
       <nav>
+        <img src="Logo.jpg" width="auto" height="50px" alt="">
+
+
         <a href="AboutMe.html">About me</a>
         &nbsp
         &nbsp
