--- a/AboutMe.html
+++ b/AboutMe.html
@@ -30,7 +30,7 @@
     </div>
 <h1 id="Top">My name is Agnes and i live in Denmark</h1>
 <p id="P1">My favorite food is  roast chicken salad and knicker bocker glory ice cream sundaes. My age is 8 I love to hug my special blue comfort toy made by Noah (also person who made this website)  </p>
-<img src="AgnesFront.JPG" width="auto" height="450px" alt="">
+<img src="Agnes3.jpeg" width="auto" height="450px" alt="">
 
 
 
