--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     </div>
 <br />
-<img src="AgnesFront.JPG" width="auto" height="550" alt="Otter holding a startfish and a toy">
+<img src="Agnes3.jpeg" width="auto" height="550" alt="Otter holding a startfish and a toy">
 
 
 
