--- a/Family.html
+++ b/Family.html
@@ -1,22 +1,22 @@
-
+<!DOCTYPE html>
 <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="master.css">
-
-    <title>About</title>
+    <title></title>
   </head>
   <body>
-    <h1 id="Ab">About me</h1>
+    <h1 class = "firstH">Agnes</h1>
     <div class="NAV">
       <nav>
         <img src="Logo.jpg" width="auto" height="50px" alt="">
 
-        <a href="Home.html">Home</a>
+
+        <a href="AboutMe.html">About me</a>
         &nbsp
         &nbsp
         &nbsp
-        <a href="Family.html">Friends and family</a>
+        <a href="index.html">Home</a>
         &nbsp
         &nbsp
         &nbsp
@@ -28,12 +28,13 @@
       </nav>
 
     </div>
-<h1 id="Top">My name is Agnes and i live in Denmark</h1>
-<p id="P11">My favorite food is  roast chicken salad and knicker bocker glory ice cream sundaes. My age is 8 I love to hug my special blue comfort toy made by Noah (also person who made this website)  </p>
-<img src="Agnes3.jpeg" width="auto" height="450px" alt="">
+<br />
+<h1 id="Top1">Family and Friends</h1>
+<p id="F1">My mother is called Melanie Haynes and my Brother is Steve if you want to see a pic click here <a href="Steve.jpeg">Steve</a></p>
 
 
 
+<img src="Agnes3.jpeg" width="auto" height="450px" alt="Otter holding a startfish and a toy">
 
   </body>
 </html>
