--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         &nbsp
         &nbsp
         &nbsp
-        <a href="Friends and family.html">Friends and family</a>
+        <a href="Family.html">Friends and family</a>
         &nbsp
         &nbsp
         &nbsp
