--- a/AboutMe.html
+++ b/AboutMe.html
@@ -12,7 +12,7 @@
       <nav>
         <img src="Logo.jpg" width="auto" height="50px" alt="">
 
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         &nbsp
         &nbsp
         &nbsp
@@ -29,7 +29,7 @@
 
     </div>
 <h1 id="Top">My name is Agnes and i live in Denmark</h1>
-<p id="P11">My favorite food is  roast chicken salad and knicker bocker glory ice cream sundaes. My age is 8 I love to hug my special blue comfort toy made by Noah (also person who made this website)  </p>
+<p class="P11">My favorite food is  roast chicken salad and knicker bocker glory ice cream sundaes. My age is 8 I love to hug my special blue comfort toy made by Noah (also person who made this website)  </p>
 <img src="Agnes3.jpeg" width="auto" height="450px" alt="">
 
 
