--- a/Family.html
+++ b/Family.html
@@ -30,7 +30,7 @@
     </div>
 <br />
 <h1 id="Top1">Family and Friends</h1>
-<p id="F1">My mother is called Melanie Haynes and my Brother is Steve if you want to see a pic click here <a href="Steve.jpeg">Steve</a></p>
+<p class="P11">My mother is called Melanie Haynes and my Brother is Steve if you want to see a pic click here <a href="Steve.jpeg">Steve</a></p>
 
 
 
