--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     </div>
 <br />
+<h1 id="welcome">Welcome</h1>
 <img src="Agnes3.jpeg" width="auto" height="550" alt="Otter holding a startfish and a toy">
 
 
