--- a/Hobbies.html
+++ b/Hobbies.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="master.css">
-    <title></title>
+    <title>Home Page</title>
   </head>
   <body>
     <h1 class = "firstH">Agnes</h1>
@@ -15,11 +15,11 @@
         &nbsp
         &nbsp
         &nbsp
+        <a href="Family.html">Friends and family</a>
+        &nbsp
+        &nbsp
+        &nbsp
         <a href="index.html">Home</a>
-        &nbsp
-        &nbsp
-        &nbsp
-        <a href="Hobbies.html">Hobbies</a>
         &nbsp
         &nbsp
         &nbsp
@@ -28,12 +28,11 @@
 
     </div>
 <br />
-<h1 id="Top1">Family and Friends</h1>
-<p class="P11">My mother is called Melanie Haynes and my Brother is Steve if you want to see a pic click here <a href="Steve.jpeg">Steve</a></p>
+<h1 id="Hobbies">Hobbies</h1>
+<p id="H">
+My hobbies are reading, PAC-MAN, sitting
+
+</p>
 
 
-
-<img src="Agnes3.jpeg" width="auto" height="450px" alt="Otter holding a startfish and a toy">
-
-  </body>
-</html>
+<img src="Agnes3.jpeg" width="auto" height="550" alt="Otter holding a startfish and a toy">
