--- a/AboutMe.html
+++ b/AboutMe.html
@@ -28,8 +28,8 @@
       </nav>
 
     </div>
-<h1 id="Top">My name is Agnes and i live in Denmark</h1>
-<p class="P11">My favorite food is  roast chicken salad and knicker bocker glory ice cream sundaes. My age is 8 I love to hug my special blue comfort toy made by Noah (also person who made this website)  </p>
+<h1 id="Top">My name is Agnes and I live in Denmark</h1>
+<p class="P11">My favorite food is  roast chicken salad and knicker bocker glory ice cream sundaes. My age is 8. I love to hug my special blue comfort toy made by Noah (also person who made this website)  </p>
 <img src="Agnes3.jpeg" width="auto" height="450px" alt="">
 
 
