--- a/Port.html
+++ b/Port.html
@@ -39,5 +39,6 @@
 <img src="IMG_3485.jpeg" width="auto" height="200" alt="Otter holding a startfish and a toy">
 <img src="IMG_3486.jpeg" width="auto" height="200" alt="Otter holding a startfish and a toy">
 <img src="IMG_3487.jpeg" width="auto" height="200" alt="Otter holding a startfish and a toy">
+<a href="IMGS.zip" download>Images from Portfolio</a>
   </body>
 </html>
