--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,7 +7,7 @@
     <title>About</title>
   </head>
   <body>
-    <h1 id="Ab">About me</h1>
+    <h1 id="Ab">Agnes</h1>
     <div class="NAV">
       <nav>
         <img src="Logo.jpg" width="auto" height="50px" alt="">
