--- a/Family.html
+++ b/Family.html
@@ -29,7 +29,7 @@
     </div>
 <br />
 <h1 id="Top1">Family and Friends</h1>
-<p class="P11">My mother is called Melanie Haynes and my brother is Steve if you want to see a pic click here <a href="Steve.jpeg">Steve</a> and she has a housemate called Fraser </p>
+<p class="P11">My mother is called Melanie Haynes and my brother is Steve if you want to see a pic click here <a href="Steve.jpeg">Steve</a> and I has a housemate called Fraser </p>
 
 
 
