--- a/Family.html
+++ b/Family.html
@@ -29,7 +29,7 @@
     </div>
 <br />
 <h1 id="Top1">Family and Friends</h1>
-<p class="P11">My mother is called Melanie Haynes and my brother is Steve. <a href="Steve.JPG I have a housemate called Fraser Bear. If you want to see a pic of my brother click here.</p>
+<p class="P11">My mother is called Melanie Haynes and my brother is Steve. <a href="Steve.jpeg">STEVE PIC</a> I have a housemate called Fraser Bear. If you want to see a pic of my brother click here.</p>
 
 
 <img src="Agnes3.jpeg" width="auto" height="450px" alt="Otter holding a startfish and a toy">
